ci: Test a bigger sample of Python versions
- Make sure we still test Python 3.7 and 3.8 after dropping old PyQt
  versions in c5a51eb0bcbab0b68cdfbf3eba2e681cff2adf7a
- Keep a modern Python version (3.11) with Qt 5 around, however
- Make sure we still test Python 3.10 too
- Also start testing the Python 3.12 alpha

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,10 +128,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          ### PyQt 5.15.2 (Python 3.9)
-          - testenv: py39-pyqt5152
+          ### PyQt 5.15.2 (Python 3.7)
+          - testenv: py37-pyqt5152
             os: ubuntu-20.04
-            python: "3.9"
+            python: "3.7"
           ### PyQt 5.15 (Python 3.10, with coverage)
           # FIXME:qt6
           # - testenv: py310-pyqt515-cov
@@ -141,22 +141,30 @@ jobs:
           - testenv: py311-pyqt515
             os: ubuntu-20.04
             python: "3.11"
-          ### PyQt 6.2 (Python 3.9)
-          - testenv: py39-pyqt62
+          ### PyQt 6.2 (Python 3.7)
+          - testenv: py37-pyqt62
             os: ubuntu-20.04
-            python: 3.9
-          ### PyQt 6.3 (Python 3.9)
-          - testenv: py39-pyqt63
+            python: "3.7"
+          ### PyQt 6.3 (Python 3.8)
+          - testenv: py38-pyqt63
             os: ubuntu-20.04
-            python: 3.9
+            python: "3.8"
           ## PyQt 6.4 (Python 3.9)
           - testenv: py39-pyqt64
             os: ubuntu-20.04
-            python: 3.9
+            python: "3.9"
+          ### PyQt 6.5 (Python 3.10)
+          - testenv: py310-pyqt65
+            os: ubuntu-22.04
+            python: "3.10"
           ### PyQt 6.5 (Python 3.11)
           - testenv: py311-pyqt65
             os: ubuntu-22.04
-            python: 3.11
+            python: "3.11"
+          ### PyQt 6.5 (Python 3.12)
+          - testenv: py312-pyqt65
+            os: ubuntu-22.04
+            python: "3.12-dev"
           ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: macos-11
