--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,9 +162,9 @@ jobs:
             os: ubuntu-22.04
             python: "3.11"
           ### PyQt 6.5 (Python 3.12)
-          - testenv: py312-pyqt65
-            os: ubuntu-22.04
-            python: "3.12-dev"
+          # - testenv: py312-pyqt65
+          #   os: ubuntu-22.04
+          #   python: "3.12-dev"
           ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: macos-11
