--- a/pytest.ini
+++ b/pytest.ini
@@ -58,7 +58,7 @@ qt_log_ignore =
     # WORKAROUND for https://www.riverbankcomputing.com/pipermail/pyqt/2023-March/045215.html
     ^QObject::connect: Connecting from COMPAT signal \(QSocketNotifier::activated\(int\)\)$
     # Randomly started showing up on Qt 5.15.2
-    ^QBackingStore::endPaint\(\) called with active painter; did you forget to destroy it or call QPainter::end\(\) on it?$
+    ^QBackingStore::endPaint\(\) called with active painter; did you forget to destroy it or call QPainter::end\(\) on it\?$
 xfail_strict = true
 filterwarnings =
     error
