nativeeventfilter: Fix lint

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -133,3 +133,6 @@ disallow_untyped_defs = True
 
 [mypy-qutebrowser.completion.models.filepathcategory]
 disallow_untyped_defs = True
+
+[mypy-qutebrowser.misc.nativeeventfilter]
+disallow_untyped_defs = True
