py312: Ignore pytest ast warnings
See https://github.com/pytest-dev/pytest/issues/10977
and #7727

--- a/pytest.ini
+++ b/pytest.ini
@@ -65,4 +65,7 @@ filterwarnings =
     default:Test process .* failed to terminate!:UserWarning
     # https://github.com/certifi/python-certifi/issues/170
     ignore:path is deprecated\. Use files\(\) instead\. Refer to https.//importlib-resources\.readthedocs\.io/en/latest/using\.html#migrating-from-legacy for migration advice\.:DeprecationWarning:certifi.core
+    # Python 3.12: https://github.com/pytest-dev/pytest/issues/10977
+    ignore:ast\.(Str|NameConstant|Num) is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning
+    ignore:Attribute s is deprecated and will be removed in Python 3\.14; use value instead:DeprecationWarning
 faulthandler_timeout = 90
