py312: Ignore pytest-benchmark deprecation warning
See #7727 and https://github.com/ionelmc/pytest-benchmark/issues/240

--- a/pytest.ini
+++ b/pytest.ini
@@ -68,4 +68,6 @@ filterwarnings =
     # Python 3.12: https://github.com/pytest-dev/pytest/issues/10977
     ignore:ast\.(Str|NameConstant|Num) is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning
     ignore:Attribute s is deprecated and will be removed in Python 3\.14; use value instead:DeprecationWarning
+    # Python 3.12: https://github.com/ionelmc/pytest-benchmark/issues/240
+    ignore:datetime\.utcnow\(\) is deprecated and scheduled for removal in a future version\. Use timezone-aware objects to represent datetimes in UTC. datetime\.now\(datetime\.UTC\)\.:DeprecationWarning:pytest_benchmark\.utils
 faulthandler_timeout = 90
