--- a/pytest.ini
+++ b/pytest.ini
@@ -63,11 +63,8 @@ xfail_strict = true
 filterwarnings =
     error
     default:Test process .* failed to terminate!:UserWarning
-    # https://github.com/certifi/python-certifi/issues/170
-    ignore:path is deprecated\. Use files\(\) instead\. Refer to https.//importlib-resources\.readthedocs\.io/en/latest/using\.html#migrating-from-legacy for migration advice\.:DeprecationWarning:certifi.core
-    # Python 3.12: https://github.com/pytest-dev/pytest/issues/10977
-    ignore:ast\.(Str|NameConstant|Num) is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning
-    ignore:Attribute s is deprecated and will be removed in Python 3\.14; use value instead:DeprecationWarning
+    # Python 3.12: https://github.com/jendrikseipp/vulture/issues/314
+    ignore:ast\.Str is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning:vulture\.core
     # Python 3.12: https://github.com/ionelmc/pytest-benchmark/issues/240
     ignore:datetime\.utcnow\(\) is deprecated and scheduled for removal in a future version\. Use timezone-aware objects to represent datetimes in UTC. datetime\.now\(datetime\.UTC\)\.:DeprecationWarning:pytest_benchmark\.utils
 faulthandler_timeout = 90
