qt6: Switch most tooling/linting to Qt 6
Only mypy missing now...

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,6 @@
 [MASTER]
 ignore=resources.py
-extension-pkg-whitelist=PyQt5,sip
+extension-pkg-whitelist=PyQt5,PyQt6,sip
 load-plugins=qute_pylint.config,
              pylint.extensions.docstyle,
              pylint.extensions.emptystring,
