--- a/tox.ini
+++ b/tox.ini
@@ -11,10 +11,10 @@ minversion = 3.20
 
 [testenv]
 setenv =
-    PYTEST_QT_API=pyqt5
-    QUTE_QT_WRAPPER=PyQt5
-    pyqt{62,63,64,65}: PYTEST_QT_API=pyqt6
-    pyqt{62,63,64,65}: QUTE_QT_WRAPPER=PyQt6
+    PYTEST_QT_API=pyqt6
+    QUTE_QT_WRAPPER=PyQt6
+    pyqt{515,5152}: PYTEST_QT_API=pyqt5
+    pyqt{515,5152}: QUTE_QT_WRAPPER=PyQt5
     cov: PYTEST_ADDOPTS=--cov --cov-report xml --cov-report=html --cov-report=
     py312: VIRTUALENV_PIP=23.1.2
     py312: PIP_REQUIRE_VIRTUALENV=0
@@ -110,6 +110,7 @@ deps =
     -r{toxinidir}/misc/requirements/requirements-tests.txt
     -r{toxinidir}/misc/requirements/requirements-pylint.txt
     -r{toxinidir}/misc/requirements/requirements-pyqt.txt
+    -r{toxinidir}/misc/requirements/requirements-pyqt-5.txt
 commands =
     {envpython} -m pylint scripts qutebrowser --output-format=colorized --reports=no {posargs}
     {envpython} scripts/dev/run_pylint_on_tests.py {toxinidir} --output-format=colorized --reports=no {posargs}
@@ -178,19 +179,19 @@ commands =
     {envpython} scripts/dev/check_doc_changes.py {posargs}
     {envpython} scripts/asciidoc2html.py {posargs}
 
-[testenv:pyinstaller-{64bit,32bit}{,-qt6}]
+[testenv:pyinstaller-{64bit,32bit}{,-qt5}]
 basepython = {env:PYTHON:python3}
 passenv =
     APPDATA
     HOME
     PYINSTALLER_DEBUG
 setenv =
-    qt6: PYINSTALLER_QT6=true
+    qt5: PYINSTALLER_QT5=true
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
-    !qt6: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
-    qt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
+    !qt5: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
+    qt5: -r{toxinidir}/misc/requirements/requirements-pyqt-5.txt
 commands =
     {envbindir}/pyinstaller --noconfirm misc/qutebrowser.spec
 
@@ -261,21 +262,21 @@ deps =
 commands =
     {envpython} -m sphinx -jauto -W --color {posargs} {toxinidir}/doc/extapi/ {toxinidir}/doc/extapi/_build/
 
-[testenv:build-release{,-qt6}]
+[testenv:build-release{,-qt5}]
 basepython = {env:PYTHON:python3}
 passenv = *
-# Override default PyQt5 from [testenv]
+# Override default PyQt6 from [testenv]
 setenv =
-    qt6: QUTE_QT_WRAPPER=PyQt6
+    qt5: QUTE_QT_WRAPPER=PyQt5
 usedevelop = true
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tox.txt
     -r{toxinidir}/misc/requirements/requirements-docs.txt
-    !qt6: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
-    qt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
+    !qt5: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
+    qt5: -r{toxinidir}/misc/requirements/requirements-pyqt-5.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
 commands =
-    !qt6: {envpython} {toxinidir}/scripts/dev/build_release.py {posargs}
-    qt6: {envpython} {toxinidir}/scripts/dev/build_release.py --qt6 {posargs}
+    !qt5: {envpython} {toxinidir}/scripts/dev/build_release.py {posargs}
+    qt5: {envpython} {toxinidir}/scripts/dev/build_release.py --qt5 {posargs}
