Rename some qt6 FIXMEs
Not relevant for v3 and qt6

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -26,7 +26,7 @@ show_error_codes = True
 show_error_context = True
 pretty = True
 
-### FIXME:qt6 get rid of this for v3
+### FIXME:v4 get rid of this
 no_implicit_optional = False
 
 [mypy-colorama]
