--- a/.pylintrc
+++ b/.pylintrc
@@ -76,7 +76,7 @@ no-docstring-rgx=(^_|^main$)
 class-const-naming-style = snake_case
 
 [FORMAT]
-# FIXME:qt6 (lint) down to 88 again once we use black
+# FIXME:v4 (lint) down to 88 again once we use black
 max-line-length=190
 ignore-long-lines=(<?https?://|file://|^# Copyright 201\d|link:)
 expected-line-ending-format=LF
