--- a/misc/requirements/requirements-tests.txt
+++ b/misc/requirements/requirements-tests.txt
@@ -18,7 +18,7 @@ idna==3.4
 importlib-metadata==6.7.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
-jaraco.functools==3.8.0
+jaraco.functools==3.8.0 ; python_version>="3.8"
 # Jinja2==3.1.2
 Mako==1.2.4
 manhole==1.8.0
@@ -57,3 +57,4 @@ Werkzeug==2.3.6 ; python_version>="3.8"
 zipp==3.15.0
 Flask==2.2.5 ; python_version=="3.7.*"
 Werkzeug==2.2.3 ; python_version=="3.7.*"
+jaraco.functools<3.8.0 ; python_version=="3.7.*"
