--- a/misc/requirements/requirements-tests.txt
+++ b/misc/requirements/requirements-tests.txt
@@ -8,17 +8,15 @@ charset-normalizer==3.1.0
 cheroot==10.0.0
 click==8.1.3
 coverage==7.2.7
-exceptiongroup==1.1.1
 execnet==1.9.0
 filelock==3.12.2
-Flask==2.3.2 ; python_version>="3.8"
+Flask==2.3.2
 hunter==3.6.1
 hypothesis==6.79.3
 idna==3.4
-importlib-metadata==6.7.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
-jaraco.functools==3.8.0 ; python_version>="3.8"
+jaraco.functools==3.8.0
 # Jinja2==3.1.2
 Mako==1.2.4
 manhole==1.8.0
@@ -49,12 +47,7 @@ sortedcontainers==2.4.0
 soupsieve==2.4.1
 tldextract==3.4.4
 toml==0.10.2
-tomli==2.0.1
 typing_extensions==4.6.3
 urllib3==2.0.3
 vulture==2.7
-Werkzeug==2.3.6 ; python_version>="3.8"
-zipp==3.15.0
-Flask==2.2.5 ; python_version=="3.7.*"
-Werkzeug==2.2.3 ; python_version=="3.7.*"
-jaraco.functools<3.8.0 ; python_version=="3.7.*"
+Werkzeug==2.3.6
