--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,11 @@
 
 adblock==0.6.0
 colorama==0.4.6
-importlib-metadata==6.7.0 ; python_version=="3.7.*"
-importlib-resources==5.12.0 ; python_version=="3.7.*" or python_version=="3.8.*"
+importlib-resources==5.12.0 ; python_version=="3.8.*"
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 Pygments==2.15.1
 PyYAML==6.0
-typing_extensions==4.6.3 ; python_version<"3.8"
-zipp==3.15.0
 # Unpinned due to recompile_requirements.py limitations
 pyobjc-core ; sys_platform=="darwin"
 pyobjc-framework-Cocoa ; sys_platform=="darwin"
