tox: Inherit setenv instead of duplicating

--- a/tox.ini
+++ b/tox.ini
@@ -244,9 +244,7 @@ commands =
 basepython = {env:PYTHON:python3}
 passenv = {[testenv:mypy-pyqt6]passenv}
 deps = {[testenv:mypy-pyqt6]deps}
-setenv =
-    pyqt6: QUTE_CONSTANTS_ARGS=--always-true=USE_PYQT6 --always-false=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-false=IS_QT5 --always-true=IS_QT6
-    pyqt5: QUTE_CONSTANTS_ARGS=--always-false=USE_PYQT6 --always-true=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-true=IS_QT5 --always-false=IS_QT6
+setenv = {[testenv:mypy-pyqt6]setenv}
 commands =
     {envpython} -m mypy --cobertura-xml-report {envtmpdir} {env:QUTE_CONSTANTS_ARGS} qutebrowser tests {posargs}
     {envdir}/bin/diff-cover --fail-under=100 --compare-branch={env:DIFF_BRANCH:origin/{env:GITHUB_BASE_REF:master}} {envtmpdir}/cobertura.xml
