--- a/misc/requirements/requirements-mypy.txt
+++ b/misc/requirements/requirements-mypy.txt
@@ -13,6 +13,7 @@ pluggy==1.2.0
 Pygments==2.15.1
 PyQt5-stubs==5.15.6.0
 tomli==2.0.1
+PyQt6-stubs @ git+https://github.com/python-qt-tools/PyQt6-stubs.git@f623a641cd5cdff53342177e4fbbf9cae8172336
 types-PyYAML==6.0.12.10
 typing_extensions==4.6.3
 zipp==3.15.0
