qt6 mypy: Lie about WebKit being available with Qt 6
185 -> 81 errors

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -49,6 +49,9 @@ ignore_missing_imports = True
 # https://github.com/ronaldoussoren/pyobjc/issues/417
 ignore_missing_imports = True
 
+[mypy-qutebrowser.browser.webkit.*]
+ignore_errors = True
+
 [mypy-qutebrowser.browser.browsertab]
 disallow_untyped_defs = True
 
