qt6 mypy: Disable warn-unused-ignores
The ignores needed between Qt 5 and Qt 6 differ.
We could buy into e.g. only Qt 6 linting, but apparently e.g. VS Code
also shows more errors when removing the Qt 5 type ignores.

Instead, disable this for now. We might want to re-enable it when we see
a major change in the mypy changelog and filter the results manually.

81 -> 50 errors

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -11,7 +11,9 @@ disallow_incomplete_defs = True
 check_untyped_defs = True
 disallow_untyped_decorators = True
 warn_redundant_casts = True
-warn_unused_ignores = True
+## can't use warn_unused_ignores because of different Qt5/Qt6 ignores.
+## FIXME:v4 (lint) reenable when dropping Qt 5
+# warn_unused_ignores = True
 # warn_return_any = True
 # no_implicit_reexport = True
 strict_equality = True
