--- a/.mypy.ini
+++ b/.mypy.ini
@@ -11,9 +11,7 @@ disallow_incomplete_defs = True
 check_untyped_defs = True
 disallow_untyped_decorators = True
 warn_redundant_casts = True
-## can't use warn_unused_ignores because of different Qt5/Qt6 ignores.
-## FIXME:v4 (lint) reenable when dropping Qt 5
-# warn_unused_ignores = True
+warn_unused_ignores = True
 # warn_return_any = True
 # no_implicit_reexport = True
 strict_equality = True
