--- a/misc/requirements/requirements-mypy.txt
+++ b/misc/requirements/requirements-mypy.txt
@@ -14,6 +14,10 @@ Pygments==2.15.1
 PyQt5-stubs==5.15.6.0
 tomli==2.0.1
 PyQt6-stubs @ git+https://github.com/python-qt-tools/PyQt6-stubs.git@f623a641cd5cdff53342177e4fbbf9cae8172336
+types-colorama==0.4.15.11
+types-docutils==0.20.0.1
+types-Pygments==2.15.0.1
 types-PyYAML==6.0.12.10
 typing_extensions==4.6.3
 zipp==3.15.0
+types-setuptools==68.0.0.0
