tox: Fix vulture-pyqtlink environment

--- a/tox.ini
+++ b/tox.ini
@@ -96,7 +96,9 @@ basepython = {env:PYTHON:python3}
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-vulture.txt
-setenv = PYTHONPATH={toxinidir}
+setenv =
+    {[testenv]setenv}
+    {[testenv:vulture]setenv}
 commands =
     {envpython} scripts/link_pyqt.py --tox {envdir}
     {[testenv:vulture]commands}
