--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1741,6 +1741,7 @@ hints.selectors:
       - '[role="menuitemcheckbox"]'
       - '[role="menuitemradio"]'
       - '[role="treeitem"]'
+      - '[aria-haspopup]'
       - '[ng-click]'
       - '[ngClick]'
       - '[data-ng-click]'
