mypy: Switch to upstream stubs for PyQt6
They are getting much better

--- a/tox.ini
+++ b/tox.ini
@@ -225,6 +225,7 @@ deps =
     -r{toxinidir}/misc/requirements/requirements-tests.txt
     -r{toxinidir}/misc/requirements/requirements-mypy.txt
     pyqt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
+commands_pre = pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt6
 commands =
     {envpython} -m mypy {env:QUTE_CONSTANTS_ARGS} qutebrowser {posargs}
 
