--- a/tox.ini
+++ b/tox.ini
@@ -187,6 +187,7 @@ passenv =
     APPDATA
     HOME
     PYINSTALLER_DEBUG
+    PYINSTALLER_COMPILE_BOOTLOADER
 setenv =
     qt5: PYINSTALLER_QT5=true
 deps =
@@ -268,6 +269,7 @@ passenv = *
 # Override default PyQt6 from [testenv]
 setenv =
     qt5: QUTE_QT_WRAPPER=PyQt5
+    PYINSTALLER_COMPILE_BOOTLOADER=true
 usedevelop = true
 deps =
     -r{toxinidir}/requirements.txt
