--- a/tox.ini
+++ b/tox.ini
@@ -250,7 +250,7 @@ deps = {[testenv:mypy-pyqt6]deps}
 setenv = {[testenv:mypy-pyqt6]setenv}
 commands =
     {envpython} -m mypy --cobertura-xml-report {envtmpdir} {env:QUTE_CONSTANTS_ARGS} qutebrowser tests {posargs}
-    {envdir}/bin/diff-cover --fail-under=100 --compare-branch={env:DIFF_BRANCH:origin/{env:GITHUB_BASE_REF:master}} {envtmpdir}/cobertura.xml
+    {envdir}/bin/diff-cover --fail-under=100 --compare-branch={env:DIFF_BRANCH:origin/{env:GITHUB_BASE_REF:main}} {envtmpdir}/cobertura.xml
 
 [testenv:sphinx]
 basepython = {env:PYTHON:python3}
