Add package job to tox.ini
This is still *very* basic, but it serves its purpose of failing for warnings during
package build.

I verified that `tox -e package` is failing by introducing some warnings with this change:
```diff
diff --git a/setup.py b/setup.py
index feb949595..6810eaf1e 100755
--- a/setup.py
+++ b/setup.py
@@ -51,8 +51,7 @@ def _get_constant(name):
try:
   common.write_git_file()
   setuptools.setup(
-        packages=setuptools.find_namespace_packages(include=['qutebrowser',
-                                                             'qutebrowser.*']),
+        packages=setuptools.find_namespace_packages(include=['qutebrowser']),
       include_package_data=True,
       entry_points={'gui_scripts':
                     ['qutebrowser = qutebrowser.qutebrowser:main']},
```

--- a/tox.ini
+++ b/tox.ini
@@ -280,3 +280,13 @@ deps =
 commands =
     !qt5: {envpython} {toxinidir}/scripts/dev/build_release.py {posargs}
     qt5: {envpython} {toxinidir}/scripts/dev/build_release.py --qt5 {posargs}
+
+[testenv:package]
+basepython = {env:PYTHON:python3}
+setenv =
+    PYTHONWARNINGS=error
+    VIRTUALENV_PIP=23.2
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/misc/requirements/requirements-dev.txt
+commands = {envpython} -m build
