Add CI job for package build
We want to run a package build in CI with warnings turned into exceptions, in order to
catch issues in CI (e.g. DeprecationWarning).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
             args: "-f gcc"  # For problem matchers
           - testenv: yamllint
           - testenv: actionlint
+          - testenv: package
     steps:
       - uses: actions/checkout@v3
         with:
