--- a/tox.ini
+++ b/tox.ini
@@ -224,9 +224,8 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
-    -r{toxinidir}/misc/requirements/requirements-mypy.txt
-    pyqt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
-commands_pre = pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt6
+    -r{toxinidir}/misc/requirements/requirements-mypy.txt  # includes PyQt5-stubs
+    -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
 commands =
     {envpython} -m mypy {env:QUTE_CONSTANTS_ARGS} qutebrowser {posargs}
 
