Don't fail on weird pip warning
We got a `DeprecationWarning` during the package build, which we were not able to
reproduce locally. For now we just don't turn this particular `DeprecationWarning` into
an exception to not fail CI.

--- a/tox.ini
+++ b/tox.ini
@@ -284,8 +284,7 @@ commands =
 [testenv:package]
 basepython = {env:PYTHON:python3}
 setenv =
-    PYTHONWARNINGS=error
-    VIRTUALENV_PIP=23.2
+    PYTHONWARNINGS=error,default:pkg_resources is deprecated as an API.:DeprecationWarning
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
