ci: Upgrade bleeding tests to Qt 6

--- a/tox.ini
+++ b/tox.ini
@@ -61,13 +61,17 @@ setenv =
     PYTEST_QT_API=pyqt5
     QUTE_QT_WRAPPER=PyQt5
 
-[testenv:bleeding]
+[testenv:bleeding{,-qt5}]
 basepython = {env:PYTHON:python3}
+# Override default PyQt6 from [testenv]
 setenv =
-    PYTEST_QT_API=pyqt5
+    qt5: PYTEST_QT_API=pyqt5
+    qt5: QUTE_QT_WRAPPER=PyQt5
 pip_pre = true
 deps = -r{toxinidir}/misc/requirements/requirements-tests-bleeding.txt
-commands_pre = pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt5 PyQtWebEngine
+commands_pre =
+    qt5: pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt5 PyQtWebEngine
+    !qt5: pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt6 PyQt6-WebEngine
 commands = {envpython} -bb -m pytest {posargs:tests}
 
 # other envs
