--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ deps = -r{toxinidir}/misc/requirements/requirements-tests-bleeding.txt
 commands_pre =
     qt5: pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt5 PyQtWebEngine
     !qt5: pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt6 PyQt6-WebEngine
-commands = {envpython} -bb -m pytest {posargs:tests}
+commands = {envpython} -bb -m pytest {posargs:tests} -s
 
 # other envs
 
