wip: Add Qt 6 bleeding tests to CI

--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,7 @@ basepython = {env:PYTHON:python3}
 setenv =
     qt5: PYTEST_QT_API=pyqt5
     qt5: QUTE_QT_WRAPPER=PyQt5
+    QT_DEBUG_PLUGINS=1
 pip_pre = true
 deps = -r{toxinidir}/misc/requirements/requirements-tests-bleeding.txt
 commands_pre =
