ci: Use proper image for Qt 6 bleeding tests

--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -12,23 +12,25 @@ jobs:
     if: "github.repository == 'qutebrowser/qutebrowser'"
     runs-on: ubuntu-20.04
     timeout-minutes: 45
-    container:
-      image: "qutebrowser/ci:archlinux-webengine-unstable"
-      env:
-        FORCE_COLOR: "1"
-        PY_COLORS: "1"
-        DOCKER: "archlinux-webengine-unstable"
-        CI: true
-      volumes:
-        # Hardcoded because we can't use ${{ runner.temp }} here apparently.
-        - /home/runner/work/_temp/:/home/runner/work/_temp/
-      options: --privileged --tty
     strategy:
       fail-fast: false
       matrix:
         include:
           - testenv: bleeding
+            image: "archlinux-webengine-unstable-qt6"
           - testenv: bleeding-qt5
+            image: "archlinux-webengine-unstable"
+    container:
+      image: "qutebrowser/ci:${{ matrix.image }}"
+      env:
+        FORCE_COLOR: "1"
+        PY_COLORS: "1"
+        DOCKER: "${{ matrix.image }}"
+        CI: true
+      volumes:
+        # Hardcoded because we can't use ${{ runner.temp }} here apparently.
+        - /home/runner/work/_temp/:/home/runner/work/_temp/
+      options: --privileged --tty
     steps:
       - uses: actions/checkout@v3
         with:
