--- a/tox.ini
+++ b/tox.ini
@@ -67,13 +67,12 @@ basepython = {env:PYTHON:python3}
 setenv =
     qt5: PYTEST_QT_API=pyqt5
     qt5: QUTE_QT_WRAPPER=PyQt5
-    QT_DEBUG_PLUGINS=1
 pip_pre = true
 deps = -r{toxinidir}/misc/requirements/requirements-tests-bleeding.txt
 commands_pre =
     qt5: pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt5 PyQtWebEngine
     !qt5: pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt6 PyQt6-WebEngine
-commands = {envpython} -bb -m pytest {posargs:tests} -s
+commands = {envpython} -bb -m pytest {posargs:tests}
 
 # other envs
 
