ci: Switch from experimental to real releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -169,10 +169,10 @@ jobs:
       # FIXME consider switching to trusted publishers:
       # https://blog.pypi.org/posts/2023-04-20-introducing-trusted-publishers/
       - name: Build and upload release
-        run: "tox -e build-release -- --upload --no-confirm --experimental"
+        run: "tox -e build-release -- --upload --no-confirm"
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.QUTEBROWSER_BOT_TEST_PYPI_TOKEN }}  # FIXME use real token
+          TWINE_PASSWORD: ${{ secrets.QUTEBROWSER_BOT_PYPI_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   finalize:
     runs-on: ubuntu-20.04
