tests: Ignore some more irrelevant messages

--- a/pytest.ini
+++ b/pytest.ini
@@ -59,6 +59,8 @@ qt_log_ignore =
     ^QObject::connect: Connecting from COMPAT signal \(QSocketNotifier::activated\(int\)\)$
     # Randomly started showing up on Qt 5.15.2
     ^QBackingStore::endPaint\(\) called with active painter; did you forget to destroy it or call QPainter::end\(\) on it\?$
+    # Qt 6.5 after system update, from qt-qt.accessibility.atspi
+    Error in contacting registry: "org\.freedesktop\.DBus\.Error\.Disconnected" "Not connected to D-Bus server"
 xfail_strict = true
 filterwarnings =
     error
@@ -66,5 +68,5 @@ filterwarnings =
     # Python 3.12: https://github.com/jendrikseipp/vulture/issues/314
     ignore:ast\.Str is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning:vulture\.core
     # Python 3.12: https://github.com/ionelmc/pytest-benchmark/issues/240
-    ignore:datetime\.utcnow\(\) is deprecated and scheduled for removal in a future version\. Use timezone-aware objects to represent datetimes in UTC. datetime\.now\(datetime\.UTC\)\.:DeprecationWarning:pytest_benchmark\.utils
+    ignore:(datetime\.)?datetime\.utcnow\(\) is deprecated and scheduled for removal in a future version\. Use timezone-aware objects to represent datetimes in UTC. (datetime\.)?datetime\.now\(datetime\.UTC\)\.:DeprecationWarning:pytest_benchmark\.utils
 faulthandler_timeout = 90
