--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -385,6 +385,20 @@ qt.workarounds.locale:
     However, It is expected that distributions shipping QtWebEngine 5.15.3
     follow up with a proper fix soon, so it is disabled by default.
 
+qt.workarounds.disable_accelerated_2d_canvas:
+  default: true
+  type: Bool
+  backend: QtWebEngine
+  restart: true
+  desc: >-
+    Disable accelerated 2d canvas to avoid graphical glitches.
+
+    On some setups graphical issues can occur on sites like Google sheets
+    and PDF.js. These don't occur when accelerated 2d canvas is turned off,
+    so we do that by default.
+
+    So far these glitches only occur on some Intel graphics devices.
+
 ## auto_save
 
 auto_save.interval:
