Make accelerated 2d canvas setting tristate with auto
I would like to be able to disable this workound for new enough chromium
versions (we still need to test that chrome 111 will be fixed, but we
can always bump it up later).

I also wanted to use the declarative mapping `_WEBENGINE_SETTINGS` instead
of adding a new conditional in `_qtwebengine_args`, because that just
seems nicer.

So I changed `_WEBENGINE_SETTINGS` so that the value could also be a
function. The idea is that the function returns on of the other values
based on some feature detection. This also required passing down the
args being used for feature detection in the calling method already.

I feel like that dict is being a bit abused here and if the entries
could be turned into objects with a bit more consistency it might be
nice. But this isn't too bad, right?

Had to change the `test_qt_args` test to be a superset test instead of
exact match because the new `--disable-accelerated-2d-canvas` arg was
showing up in the results based on whatever Qt version you happen to be
running the tests on.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -386,8 +386,13 @@ qt.workarounds.locale:
     follow up with a proper fix soon, so it is disabled by default.
 
 qt.workarounds.disable_accelerated_2d_canvas:
-  default: true
-  type: Bool
+  type:
+    name: String
+    valid_values:
+      - always: Disable accelerated 2d canvas
+      - auto: Disable on Qt6 < 6.6.0, enable otherwise
+      - never: Enable accelerated 2d canvas
+  default: auto
   backend: QtWebEngine
   restart: true
   desc: >-
