add pyqt6.6 requirements file
What is that big chain of !pyqt- etc mean? idk

ref: https://github.com/qutebrowser/qutebrowser/pull/7990

--- a/tox.ini
+++ b/tox.ini
@@ -51,8 +51,9 @@ deps =
     pyqt63: -r{toxinidir}/misc/requirements/requirements-pyqt-6.3.txt
     pyqt64: -r{toxinidir}/misc/requirements/requirements-pyqt-6.4.txt
     pyqt65: -r{toxinidir}/misc/requirements/requirements-pyqt-6.5.txt
+    pyqt66: -r{toxinidir}/misc/requirements/requirements-pyqt-6.6.txt
 commands =
-    !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64-!pyqt65: {envpython} scripts/link_pyqt.py --tox {envdir}
+    !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64-!pyqt65-!pyqt66: {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -bb -m pytest {posargs:tests}
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
