--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
           ### PyQt 6.5 (Python 3.12)
           - testenv: py312-pyqt65
             os: ubuntu-22.04
-            python: "3.12-dev"
+            python: "3.12"
           ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: macos-11
