--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,20 +165,20 @@ jobs:
           - testenv: py312-pyqt66
             os: ubuntu-22.04
             python: "3.12"
-          ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
-          - testenv: py39-pyqt515
+          ### macOS Big Sur
+          - testenv: py311-pyqt66
             os: macos-11
-            python: "3.9"
+            python: "3.11"
             args: "tests/unit"  # Only run unit tests on macOS
           ### macOS Monterey
-          - testenv: py39-pyqt515
+          - testenv: py311-pyqt66
             os: macos-12
-            python: "3.9"
+            python: "3.11"
             args: "tests/unit"  # Only run unit tests on macOS
-          ### Windows: PyQt 5.15 (Python 3.9 to match PyInstaller env)
-          - testenv: py39-pyqt515
+          ### Windows
+          - testenv: py311-pyqt66
             os: windows-2019
-            python: "3.9"
+            python: "3.11"
     runs-on: "${{ matrix.os }}"
     steps:
       - uses: actions/checkout@v4
