Run just some flaky tests, to allow for iterating faster
This is not all of the tests that are being flaky. Just the few I looked
at the other day. Hopefully some of them keep failing in this much
smaller set than our usual test suite, otherwise I'll go add some more.

Not sure what I'm going to add in next, probably some code to probe the
state of the page. Run a simple event handler we know works in
isolation or something. Make sure things are still registered. Turn on
chrome debug logs?

--- a/pytest.ini
+++ b/pytest.ini
@@ -41,6 +41,7 @@ markers =
     qt6_only: Tests which should only run with Qt 6
     qt5_xfail: Tests which fail with Qt 5
     qt6_xfail: Tests which fail with Qt 6
+    e2e_flaky: End-to-end tests which are fairly consistently failing to find JS log message
 qt_log_level_fail = WARNING
 qt_log_ignore =
     # GitHub Actions
