--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ deps =
     pyqt66: -r{toxinidir}/misc/requirements/requirements-pyqt-6.6.txt
 commands =
     !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64-!pyqt65-!pyqt66: {envpython} scripts/link_pyqt.py --tox {envdir}
-    {envpython} -bb -m pytest {posargs:tests}
+    {envpython} -bb -m pytest -m e2e_flaky tests/end2end
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
 [testenv:py-qt5]
