Expose QtWebEngine 6.6 dark mode image classifier policy
Implemented as a separate setting in Chromium, but exposed to qutebrowser users
as a value for `policy.images`, as it's a simple toggle that does not have any
effect when `policy.images` is not set to `smart` anyways.

To support this, the _Settings.mapping value now supports None values,
which leads to _Setting.chromium_tuple to return None, which means that
no switch is added in this case.

See #7646

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -3298,13 +3298,11 @@ colors.webpage.darkmode.policy.images:
       - never: Never apply dark mode filter to any images.
       - smart: "Apply dark mode based on image content. Not available with Qt
         5.15.0."
+      - smart-simple: "On QtWebEngine 6.6, use a simpler algorithm for smart mode (based
+      on numbers of colors and transparency), rather than an ML-based model.
+      Same as 'smart' on older QtWebEnigne versions."
   desc: >-
       Which images to apply dark mode to.
-
-      With QtWebEngine 5.15.0, this setting can cause frequent renderer process
-      crashes due to a
-      https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/304211[bug
-      in Qt].
   restart: true
   backend: QtWebEngine
 
