--- a/misc/requirements/requirements-pylint.txt
+++ b/misc/requirements/requirements-pylint.txt
@@ -16,7 +16,7 @@ pycparser==2.21
 PyJWT==2.8.0
 pylint==3.0.3
 python-dateutil==2.8.2
-qute_pylint @ file:///home/runner/work/qutebrowser/qutebrowser/scripts/dev/pylint_checkers
+./scripts/dev/pylint_checkers
 requests==2.31.0
 six==1.16.0
 tomli==2.0.1
